--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
   font-family: fonarto;
   src: url("../fonts/fonarto.ttf") format("truetype");
 }
+@font-face {
+  font-family: cabinbold;
+  src: url("../fonts/cabinbold.ttf") format("truetype");
+}
 
 html,
 body,
@@ -918,12 +922,14 @@ body {
 }
 
 .f_password a {
-  color: #39b542;
-  font-weight: 300;
-  font-size: 0.8em;
+
+  color: #b3b3b3;
+    font-size: 13px;
+    font-weight: 100;
+    text-decoration: underline;
+
   font-family: "Nunito";
   text-align: center;
-  font-weight: bold;
 }
 
 /* end of register page css */
@@ -1216,11 +1222,18 @@ How it works section
   background-size: cover;
   background-position: center bottom;
   min-height: calc(100vh - 120px);
+
 }
 
 .login {
   background-color: rgba(255, 255, 255, 0.92);
   padding: 0px 0px;
+    -webkit-box-shadow: 0 0px 14px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0px 14px 0px rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 0px 14px 0px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 0px 14px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0px 14px 0px rgba(0, 0, 0, 0.1);
+
 }
 
 .login_left {
@@ -1281,12 +1294,13 @@ How it works section
 }
 
 .l_f_title {
-  text-align: center;
-  display: block;
-  margin-bottom: 10px;
-  font-size: 1rem;
-  font-weight: 500;
-  color: #6a7781;
+    text-align: center;
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.2rem;
+        line-height: 24px;
+    font-weight: 600;
+    color: #6a7781;
 }
 
 .l_f_subtext {
@@ -1465,7 +1479,7 @@ How it works section
   border: 1px solid;
   border-color: #39b542;
   border-radius: 0.125rem;
-  box-shadow: 0 10px 30px rgba(65, 205, 82, 0.5);
+  /*box-shadow: 0 10px 30px rgba(65, 205, 82, 0.5);*/
   margin: 24px 12px 0 0;
   -webkit-transition: 0.2s;
   -moz-transition: 0.2s;
@@ -1492,7 +1506,7 @@ How it works section
 
 .btn-action span {
   font-family: "Nunito";
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   text-transform: capitalize;
   letter-spacing: 1px;
@@ -5668,7 +5682,7 @@ small {
   border-radius: 0px;
   font-family: "Nunito";
   padding: 6px 16px;
-  border-radius: 40px;
+  border-radius: 5px;
 }
 
 .dashboard .pagination > li:last-child > a,
@@ -10787,9 +10801,14 @@ button:focus {
   line-height: normal;
   font-family: "Nunito";
   text-transform: capitalize;
-  padding: 70px 50px;
-  background-color: #eef5f6;
+  /*padding: 70px 50px;*/
+  /*background-color: #eef5f6;*/
 }
+.Stores-home .zip-search-box {
+  padding: 50px 54px;
+  background-color: #fff;    
+  }
+
 .Stores-home .zip-search-box .location_logo {
   width: 250px;
 }
@@ -11141,12 +11160,13 @@ button:focus {
   font-size: 14px;
   text-align: left;
   display: inline-block;
-  width: 90%;
+  width: 89%;
 }
 .s_d_content ul li i {
   color: #fe9000;
   display: inline;
   margin-right: 5px;
+  font-size: 20px;
   vertical-align: top;
 }
 .s_d_content .s_d_order_btn {
@@ -11157,6 +11177,7 @@ button:focus {
   padding: 4px 18px;
   text-align: center;
   font-size: 14px;
+  margin-top: 12px;
 }
 .s_d_content .s_d_order_btn:focus {
   outline: none;
@@ -11394,4 +11415,89 @@ button:focus {
 }
 input:focus {
   outline: none;
+}
+
+/*new styles kk*/
+.get-loc-head .get-loc-head-inner{
+ max-width: 590px;
+ margin: auto;
+     -webkit-box-shadow: 0 1px 5px 0 rgba(96, 96, 96, 0.3);
+    -moz-box-shadow: 0 1px 5px 0 rgba(96, 96, 96, 0.3);
+    box-shadow: 0 1px 5px 0 rgba(96, 96, 96, 0.3);
+}
+.get-loc-menu .navbar-toggle{
+display: none;
+}
+.get-loc-head{
+    padding: 6px 20px;
+}
+@media screen and (max-width:1024px){
+  .get-loc-head .get-loc-head-inner{
+     max-width: 500px;
+    }
+  .s_d_content ul li i{
+    font-size: 16px;
+  }
+}
+@media screen and (max-width:1024px){
+  .login_bg {
+      padding: 47px 0 60px 0 !important;
+  }
+}
+
+p.cus-logo-text {
+font-weight: 700;
+    line-height: 27px;
+    font-size: 1.5rem;
+    padding: 0 8px;
+    color: #40b449;
+    font-family: cabinbold;
+    background: -webkit-linear-gradient(#fe9000, #40b449);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 60.2px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.s_d_content h2{  
+    height: 34.2px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 12px;
+}
+.Store_details_list{
+  margin-bottom: 28px;
+}
+.s_d_content .s_d_order_btn:hover, .s_d_content .s_d_order_btn:focus {
+    border-color: #fe9000;
+    background-color: #fe9000;
+    color: #ffffff;
+}
+
+.google-l {
+  background-color: #dd4b39;
+  color: white;
+      margin-bottom: 12px;
+}
+.fb-l {
+  background-color: #3B5998;
+  color: white;
+      margin-bottom: 12px;
+}
+.f_createacc a{
+color: #f7901d;
+    line-height: 12px;
+    font-size: 16px;
+    font-family: "Nunito";
+    text-align: center;
+    font-weight: bold;
+}
+.login-head-align{
+  max-width: 480px;
+    margin: auto !important;
 }
